personal project updates with the additonal collections added and middleware implemented
