# controllers/index.js
@@ -1,13 +1,13 @@
 
-const Controller = {};
+// const Controller = {};
 
-Controller.redirect = (req, res) => {
-    // res.json is used to create backend api and redirects to api-docs
-    res.redirect('/api-docs');
-};
+// Controller.redirect = (req, res) => {
+//     // res.json is used to create backend api and redirects to api-docs
+//     res.redirect('/api-docs');
+// };
 
 
 
-module.exports = Controller
+// module.exports = Controller
 
    
