# routes/accounts.js
@@ -1,14 +1,16 @@
 const express = require('express');
 const router = express.Router();
-const contactsController = require('../controllers/accounts');
+const accountController = require('../controllers/accounts');
 const { requiresAuth } = require('express-openid-connect');
 
 
-router.get('/', requiresAuth(), contactsController.getAllAccounts); // http://localhost:8080/accounts
-router.get('/:id', requiresAuth(), contactsController.getSingleAccount);
-router.post('/', contactsController.createAccount);
-router.put('/:id', requiresAuth(), contactsController.updateAccount);
-router.delete('/:id', contactsController.deleteAccount);
-// router.patch('/admin/:id', contactsController.adminupdateAccount);
+// Routes for accounts controller
+router.get('/', requiresAuth(), accountController.getAllAccounts); // http://localhost:8080/accounts
+router.get('/:id', accountController.getSingleAccount);
+router.post('/', accountController.createAccount);
+router.put('/:id', accountController.updateAccount);
+router.delete('/:id', accountController.deleteAccount);
+
+// router.patch('/admin/:id', accountController.adminupdateAccount);
 
 module.exports = router;
